--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -5,8 +5,8 @@
     <div><%= application.name %></div>
     <div class="text-xs font-semibold opacity-60"><%= application.url %></div>
   </div>
-  <div class="flex flex-col sm:flex-row gap-4">
-    <%= link_to "Edit", edit_application_path(application), class: "btn btn-soft hover:btn-primary my-auto" %>
-    <%= button_to "Destroy", application, method: :delete, class: "btn btn-error btn-soft hover:btn-error my-auto", data: { turbo_confirm: "Are you sure?" } %>
+  <div class="flex flex-col sm:flex-row gap-4 my-auto">
+    <%= link_to "Edit", edit_application_path(application), class: "btn btn-soft hover:btn-primary" %>
+    <%= button_to "Destroy", application, method: :delete, class: "btn btn-error btn-soft hover:btn-error", data: { turbo_confirm: "Are you sure?" } %>
   </div>
 </li>
