--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -5,8 +5,8 @@
     <div><%= bookmark.name %></div>
     <div class="text-xs font-semibold opacity-60"><%= bookmark.url %></div>
   </div>
-  <div class="flex flex-col sm:flex-row gap-4">
-    <%= link_to "Edit", edit_bookmark_path(bookmark), class: "btn btn-soft hover:btn-primary my-auto" %>
-    <%= button_to "Destroy", bookmark, method: :delete, class: "btn btn-error btn-soft hover:btn-error my-auto", data: { turbo_confirm: "Are you sure?" } %>
+  <div class="flex flex-col sm:flex-row gap-4 my-auto">
+    <%= link_to "Edit", edit_bookmark_path(bookmark), class: "btn btn-soft hover:btn-primary" %>
+    <%= button_to "Destroy", bookmark, method: :delete, class: "btn btn-error btn-soft hover:btn-error", data: { turbo_confirm: "Are you sure?" } %>
   </div>
 </li>
