--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,17 +4,17 @@
     <span class="float-right"><%= temperature %></span>
   </p>
 
-  <% if Setting[:greetings_enabled] || Setting[:wise_words_enabled] %>
+  <% if Setting[:greetings_enabled] || Setting[:quotes_enabled] %>
     <div class="divider"></div>
 
     <div class="flex flex-col gap-4">
       <% if Setting[:greetings_enabled] %>
         <h1 class="text-5xl font-bold"><%= @greeting %></h1>
       <% end %>
-      <% if Setting[:wise_words_enabled] %>
+      <% if Setting[:quotes_enabled] %>
         <p class="border-l-2 pl-2">
-          <span class="font-thin"><%= @wisdom.quote %></span><br>
-          <span class="font-medium"><%= @wisdom.author %></span>
+          <span class="font-thin"><%= @quote.quote %></span><br>
+          <span class="font-medium"><%= @quote.author %></span>
         </p>
       <% end %>
     </div>
