--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="max-w-7xl mx-auto">
     <%= render "layouts/partials/header" %>
     <main class="container mx-auto my-18 px-5 flex">
       <%= yield %>
