--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -3,7 +3,7 @@
   <div class="my-auto">
     <%= turbo_stream_from application %>
     <div><%= application.name %></div>
-    <div class="text-xs font-semibold opacity-60"><%= application.url %></div>
+    <div class="text-xs font-semibold opacity-60 text-base-content/48"><%= application.url %></div>
   </div>
   <div class="flex flex-col sm:flex-row gap-4 my-auto">
     <%= link_to "Edit", edit_application_path(application), class: "btn btn-soft hover:btn-primary" %>
