--- a/app/views/home/_application_puck.html.erb
+++ b/app/views/home/_application_puck.html.erb
@@ -7,8 +7,10 @@
       </div>
     </figure>
     <div class="card-body overflow-hidden">
-      <h2 class="card-title text-nowrap overflow-hidden text-ellipsis"><%= application.name %></h2>
-      <p class="text-nowrap overflow-hidden text-ellipsis"><%= application.url %></p>
+      <div class="my-auto">
+        <h2 class="card-title text-nowrap overflow-hidden text-ellipsis"><%= application.name %></h2>
+        <p class="text-nowrap overflow-hidden text-ellipsis text-base-content/48"><%= application.url %></p>
+      </div>
     </div>
   </div>
 <% end %>
