--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,7 +1,8 @@
 <fieldset class="fieldset bg-base-200 border-base-300 rounded-box border p-4 shadow-lg w-full max-w-lg sm:w-lg mx-auto">
   <legend class="fieldset-legend"><%= content_for(:title) %></legend>
 
-  <%= form_with(model: category, class: "contents") do |form| %>
+  <%# Turbo is disabled to allow for redirects with anchors: https://github.com/hotwired/turbo/issues/211 %>
+  <%= form_with(model: category, class: "contents", data: { turbo: false }) do |form| %>
     <% if category.errors.any? %>
       <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-md mt-3">
         <h2><%= pluralize(category.errors.count, "error") %> prohibited this category from being saved:</h2>
@@ -18,6 +19,6 @@
     <%= form.text_field :name, class: "input w-full" %>
 
     <%= form.submit class: "btn btn-primary mt-4" %>
-    <%= link_to "Back", categories_path, class: "btn btn-outline" %>
+    <%= link_to "Back", categories_path(anchor: category.token), class: "btn btn-outline" %>
   <% end %>
 </fieldset>
