--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,12 +29,16 @@
     <%= render partial: "application_puck", collection: @applications, as: :application %>
   </div>
 
+  <%= turbo_stream_from :categories %>
+  <%= turbo_stream_from :bookmarks %>
   <%= link_to "Bookmarks", bookmarks_path, class: "text-2xl font-bold mt-12 mb-4 uppercase" %>
   <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-4 gap-y-8">
     <% @categories.each do |category| %>
       <div class="flex flex-col gap-2">
+        <%= turbo_stream_from category, class: "hidden" %>
         <%= link_to category.name, category_path(category), class: "text-lg text-base-content/32 font-bold uppercase" %>
         <% category.bookmarks.order(:position).each do |bookmark| %>
+          <%= turbo_stream_from bookmark, class: "hidden" %>
           <%= link_to bookmark.name, bookmark.url, target: :blank, class: "hover:border-l-2 hover:pl-2 transition-all" %>
         <% end %>
       </div>
