Normalized icons into variants, bodged icons/variants seeds, performance improvements

--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -1,5 +1,5 @@
 <li id="<%= application.token %>" class="list-row hover:bg-base-300 cursor-grab" data-sortable-update-url="<%= application_path(application) %>">
-  <%= icon_tag application.icon, class: "size-10 fill-primary my-auto" %>
+  <%= icon_tag application.icon_variant, class: "size-10 fill-primary my-auto" %>
   <div class="my-auto">
     <%= turbo_stream_from application %>
     <div><%= application.name %></div>
