--- a/app/views/home/_application.html.erb
+++ b/app/views/home/_application.html.erb
@@ -5,7 +5,7 @@
   <div class="card card-side w-full bg-base-100 hover:bg-base-200 card-xs hover:shadow">
     <figure class="flex-shrink-[0]">
       <div class="size-8 ml-4 mr-2">
-        <%= icon_tag application.icon, class: "fill-primary" %>
+        <%= icon_tag application.icon_variant, class: "fill-primary" %>
       </div>
     </figure>
     <div class="card-body overflow-hidden">
