--- a/app/views/layouts/shared/_header.html.erb
+++ b/app/views/layouts/shared/_header.html.erb
@@ -1,28 +1,5 @@
-<div class="navbar fixed top-0 left-0 w-full p-4 bg-base-100/50 backdrop-blur-xl z-10">
-  <div class="flex-1">
-    <div class="dropdown dropdown-start">
-      <%= link_to settings_path, tabindex: 0, role: "button", class: "group btn btn-ghost btn-sm" do %>
-        <%= inline_svg_tag "icon.svg", class: "size-6 fill-primary/25 group-hover:fill-primary" %>
-      <% end %>
-      <ul tabindex="-1" class="menu menu-sm dropdown-content backdrop-blur-xl rounded-box shadow-2xl border border-neutral">
-        <% unless controller_name == "home" %>
-          <li class="first:font-bold"><%= link_to "Home", home_path %></li>
-        <% end %>
-        <% unless controller_name == "settings" %>
-          <li class="first:font-bold"><%= link_to "Settings", settings_path %></li>
-        <% end %>
-        <% unless controller_name == "applications" %>
-          <li><%= link_to "Applications", applications_path %></li>
-        <% end %>
-        <% unless controller_name == "bookmarks" %>
-          <li><%= link_to "Bookmarks", bookmarks_path %></li>
-        <% end %>
-        <% unless controller_name == "themes" %>
-          <li><%= link_to "Themes", themes_path %></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
-</div>
-<%# This needs to exist outside the navbar for the backdrop blur to work. %>
-<%= render 'layouts/shared/theme_select' unless controller_name == 'themes' && action_name.in?(%w[new edit]) %>
+<div class="navbar fixed top-0 left-0 w-full p-4 bg-base-100/50 backdrop-blur-xl z-10"></div>
+
+<%# These needs to exist outside the navbar for the backdrop blur to work. %>
+<%= render "layouts/shared/navigation" %>
+<%= render "layouts/shared/theme_select" unless controller_name == "themes" && action_name.in?(%w[new edit]) %>
