--- a/app/views/home/sections/_bookmarks.html.erb
+++ b/app/views/home/sections/_bookmarks.html.erb
@@ -6,7 +6,7 @@
     <%= turbo_stream_from :bookmarks %>
 
     <% if @categories.any? %>
-      <div class="grid sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-4 gap-y-8">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-4 gap-y-8">
         <%= render partial: "category", collection: @categories, as: :category %>
       </div>
     <% else %>
