--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -1,6 +1,9 @@
-<li id="<%= bookmark.token %>" class="list-row hover:bg-base-300 cursor-grab" data-url="<%= bookmark_path(bookmark) %>">
+<li id="<%= bookmark.token %>" class="list-row hover:bg-base-300" data-url="<%= bookmark_path(bookmark) %>">
+  <div class="flex cursor-grab">
+    <i class="fa-solid fa-grip-vertical my-auto"></i>
+  </div>
   <div class="text-4xl font-ubuntu font-light opacity-30 tabular-nums my-auto"><%= bookmark.position.to_s.rjust(2, '0') %></div>
-  <div class="my-auto">
+  <div class="list-col-grow my-auto">
     <%= turbo_stream_from bookmark %>
     <div><%= bookmark.name %></div>
     <div class="text-xs font-semibold opacity-60 text-base-content/48"><%= bookmark.url %></div>
