--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,6 +1,9 @@
-<li id="<%= category.token %>" class="list-row hover:bg-base-300 cursor-grab" data-sortable-update-url="<%= category_path(category) %>">
+<li id="<%= category.token %>" class="list-row hover:bg-base-300" data-sortable-update-url="<%= category_path(category) %>">
+  <div class="flex cursor-grab">
+    <i class="fa-solid fa-grip-vertical my-auto"></i>
+  </div>
   <div class="text-4xl font-ubuntu font-light opacity-30 tabular-nums my-auto"><%= category.position.to_s.rjust(2, '0') %></div>
-  <div class="my-auto">
+  <div class="list-col-grow my-auto">
     <%= turbo_stream_from category %>
     <div><%= category.name %></div>
   </div>
