Fixed links not forcing a new tab

--- a/app/views/home/_application.html.erb
+++ b/app/views/home/_application.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (application:) %>
-<%= link_to application.url, target: :blank do %>
+<%= link_to application.url, target: :_blank do %>
   <%= turbo_stream_from application %>
 
   <div class="card card-side w-full bg-base-100 hover:bg-base-200 card-xs hover:shadow hover:noise">
