--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -30,12 +30,12 @@
 
   <p class="mt-2 text-xs text-center text-base-content/50">
     Icons are modified and colored programatically to match the user's theme.
-    Icons are provided by <a href="https://github.com/selfhst/icons/blob/main/LICENSE" target="blank" class="hover:underline hover:text-base-content">selfh.st/icons</a>,
-    and <a href="https://fontawesome.com/license/free" target="blank" class="hover:underline hover:text-base-content">Font Awesome Free</a>
-    under <a href="https://creativecommons.org/licenses/by/4.0/deed" target="blank" class="hover:underline hover:text-base-content">CC BY 4.0</a>.
+    Icons are provided by <a href="https://github.com/selfhst/icons/blob/main/LICENSE" target="_blank" class="hover:underline hover:text-base-content">selfh.st/icons</a>,
+    and <a href="https://fontawesome.com/license/free" target="_blank" class="hover:underline hover:text-base-content">Font Awesome Free</a>
+    under <a href="https://creativecommons.org/licenses/by/4.0/deed" target="_blank" class="hover:underline hover:text-base-content">CC BY 4.0</a>.
   </p>
 
-  <a href="https://www.github.com/bert-mccutchen/oak" target="blank" class="block w-1/2 max-w-[100] mt-8 mx-auto">
+  <a href="https://www.github.com/bert-mccutchen/oak" target="_blank" class="block w-1/2 max-w-[100] mt-8 mx-auto">
     <%= inline_svg_tag "icon.svg", class: "fill-base-content/50 hover:fill-base-content rounded-full" %>
   </a>
 </div>
