--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -5,7 +5,7 @@
     <h1 class="font-bold text-4xl">Settings</h1>
     <div class="flex flex-row justify-between gap-4">
       <div class="tooltip tooltip-bottom" data-tip="Reroll Daily Quote">
-        <%= link_to reroll_daily_quotes_path, class: "btn hover:btn-primary", data: { turbo_prefetch: false } do %>
+        <%= link_to reroll_daily_quotes_path, method: :patch, class: "btn hover:btn-primary", data: { turbo_method: :patch, turbo_prefetch: false } do %>
           <i class="fa-solid fa-dice-d20"></i>
         <% end %>
       </div>
