--- a/app/views/layouts/shared/_theme_select.html.erb
+++ b/app/views/layouts/shared/_theme_select.html.erb
@@ -20,8 +20,7 @@
       <% Theme.enabled.where.not(id: Current.theme).order(:name).each do |theme| %>
         <%= form_with(model: Setting.find_by(slug: :theme)) do |form| %>
           <li>
-            <%= form.hidden_field :value, value: theme.token %>
-            <%= form.button class: "flex flex-row gap-2 w-42" do %>
+            <%= form.button :value, class: "flex flex-row gap-2 w-42", value: theme.token do %>
               <%= render "layouts/shared/theme_icon", theme: theme.token %>
               <%= theme.name %>
             <% end %>
