--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,8 @@
     <main class="container mx-auto my-18 px-5 flex">
       <%= yield %>
     </main>
-    <%= render "layouts/shared/notices" %>
     <%= render "layouts/shared/confirm" %>
+    <%= render "layouts/shared/notices" %>
+    <%= render "layouts/shared/search" %>
   </body>
 </html>
